--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -2,6 +2,7 @@ body {
     background-color: #dbd5d5;
     margin: 0px;
     padding: 0px;
+    font-family: Arial;
 }
 
 p {
@@ -44,7 +45,6 @@ h1 {
 
 h2 {
     display: flex;
-    justify-content: center;
     font-size: 30px;
 }
 
