--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1,58 +1,38 @@
 body {
-    background-color: #dbd5d5;
-    margin: 0px;
-    padding: 0px;
-    font-family: Arial;
-}
-
-p {
-    margin-left: 10px;
-}
-.header {
     display: flex;
+    justify-content: center;
     margin: 10px;
-} 
+    padding: 20px;
+    color: #ffff;
+}
 
+.container {
+    flex:1;
+    justify-content: center;
+    width: 500px;
+    height: 500px;
+    padding-top: 10px;
+    background-color: #131111;
+}
+
+.head,
 h1 {
     display: flex;
     justify-content: center;
 }
 
-.nome {
-    display: flex;
-    margin-bottom: 5px;
-}
-
-.sobrenome {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 5px;
-}
-
-.data {
-    display: flex;
-    margin-bottom: 5px;
-}
-
-.email {
-    display: flex;
-    margin-bottom: 5px;
-}
-
-.header1 {
-    flex:1;
-}
-
+.area,
 h2 {
-    display: flex;
-    font-size: 30px;
+    margin-left: 10px;
 }
 
-.rua {
-    display: flex;
+label {
+    margin-left: 15px;
+}
+input {
     margin-left: 5px;
 }
 
-.cep {
+button {
     margin-left: 5px;
 }
