--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -10,9 +10,9 @@ body {
     flex:1;
     justify-content: center;
     width: 500px;
-    height: 500px;
+    height: 600px;
     padding-top: 10px;
-    background-color: #131111;
+    background-color: #333030;
 }
 
 .head,
@@ -28,11 +28,27 @@ h2 {
 
 label {
     margin-left: 15px;
+
 }
 input {
     margin-left: 5px;
+    margin-top: 5px;
+    outline: 0;
 }
 
 button {
+    padding: 10px;
+    font-size: 15px;
     margin-left: 5px;
+    margin-top: 5px;
+    border:1px solid #CCC;
+    background-color: #EEE;
 }
+ button:hover {
+    background-color: #DDD;
+ }
+
+input [type=checkbox] {
+    margin: 0px;
+}
+
